crates/pack/tests/compile_fail/effect_proposals_field_rejects_fact.stderr
warning: unreachable statement
  --> tests/compile_fail/effect_proposals_field_rejects_fact.rs:11:5
   |
 9 |     let fact: Fact = todo!();
   |                      ------- any code following this expression is unreachable
10 |     // Fact ≠ ProposedFact — this must fail.
11 |     effect.proposals.push(fact);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/compile_fail/effect_proposals_field_rejects_fact.rs:11:27
   |
11 |     effect.proposals.push(fact);
   |                      ---- ^^^^ expected `ProposedFact`, found `Fact`
   |                      |
   |                      arguments to this method are incorrect
   |
note: method defined here
  --> $RUST/alloc/src/vec/mod.rs
   |
   |     pub fn push(&mut self, value: T) {
   |            ^^^^
